Cycles: support shader transparency for holdout objects

Now transparent areas of the object will render objects behind.

Fixes T78728.